Add complete private photo gallery
